Bug 485891 - Missing bug reporting address, can't report crashes with drkonqi
Summary: Missing bug reporting address, can't report crashes with drkonqi
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.4
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-21 11:38 UTC by Kloud
Modified: 2024-06-03 10:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kloud 2024-04-21 11:38:53 UTC
SUMMARY
Can't report plasma-systemmonitor crashes with drkonqi

STEPS TO REPRODUCE
1. Open plasma-systemmonitor
2. Kill it with 'killall -SEGV plasma-systemmonitor'

OBSERVED RESULT
No notification about the crash appears
Setting IncludeAll=true in drkonqi config produces a notification, but clicking on it says 'You cannot report this error because plasma-systemmonitor does not provide a bug reporting address'

EXPECTED RESULT
The crash can be submitted using drkonqi

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Comment 1 Bug Janitor Service 2024-05-30 14:19:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-systemmonitor/-/merge_requests/292
Comment 2 Arjen Hiemstra 2024-06-03 08:49:17 UTC
Git commit 1d3e3cafc219c24e014b6f5fdeea665a5b93c4a3 by Arjen Hiemstra.
Committed on 03/06/2024 at 08:48.
Pushed by ahiemstra into branch 'master'.

Enable KCrash

Apparently we did not enable this yet.

M  +1    -1    CMakeLists.txt
M  +1    -0    src/CMakeLists.txt
M  +3    -0    src/main.cpp

https://invent.kde.org/plasma/plasma-systemmonitor/-/commit/1d3e3cafc219c24e014b6f5fdeea665a5b93c4a3
Comment 3 Arjen Hiemstra 2024-06-03 10:49:30 UTC
Git commit 6cfcc6c4c4da5dd6a93098071ceb0a03e4f0ec8e by Arjen Hiemstra.
Committed on 03/06/2024 at 10:48.
Pushed by ahiemstra into branch 'Plasma/6.1'.

Enable KCrash

Apparently we did not enable this yet.


(cherry picked from commit 1d3e3cafc219c24e014b6f5fdeea665a5b93c4a3)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>

M  +1    -1    CMakeLists.txt
M  +1    -0    src/CMakeLists.txt
M  +3    -0    src/main.cpp

https://invent.kde.org/plasma/plasma-systemmonitor/-/commit/6cfcc6c4c4da5dd6a93098071ceb0a03e4f0ec8e