Enable KCrash

Apparently we did not enable this yet.

BUG: 485891